--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Food blog</title>
+    <title>Foodie's Kitchen</title>
 </head>
 <body>
     <div class = "page-container">
@@ -14,13 +14,11 @@
         <div class="header">
             <div class="logo">
                 <img src="/images/logofood-removebg-preview.png" alt="Food Blog" /> 
-                <span>Food Blog</span>
+                <span>Foodie's Kitchen</span>
             </div>
             <div class="nav-menu">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
                     <li><a href="/recipes/allRecipes.html">Recipes</a></li>
                 </ul>
             </div>
@@ -54,13 +52,11 @@
             <div class="recipes-list">
                 <h2>Most Recents</h2>
                 <div id="most-recent-recipes">
-                    <!-- Recipes will be injected here from JSON -->
                 </div>
             </div>
             <div class="favorite-recipes">
                 <h2>Top 5 Favorites</h2>
                 <ul id="favorites">
-                    <!-- Top 5 favorite recipes will be injected here from JSON -->
                 </ul>
             </div>
         </div>
