--- a/recipes/occassion.html
+++ b/recipes/occassion.html
@@ -5,20 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
-    <title>Food Blog</title>
+    <title>Foodie's Kitchen</title>
 </head>
 <body>
     <div class = "page-container">
         <div class="header">
             <div class="logo">
                 <img src="/images/logofood-removebg-preview.png" alt="Food Blog" /> 
-                <span>Food Blog</span>
+                <span>Foodie's Kitchen</span>
             </div>
             <div class="nav-menu">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
                     <li><a href="/recipes/allRecipes.html">Recipes</a></li>
                 </ul>
             </div>
