--- a/recipes/recipeDetails.html
+++ b/recipes/recipeDetails.html
@@ -1,3 +1,11 @@
+<!-- <?php
+// At the top of your PHP file
+if (isset($_GET['id']) && is_numeric($_GET['id'])) {
+    $recipe_id = intval($_GET['id']);
+} else {
+    die('Invalid recipe ID.');
+}
+?> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,20 +13,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
-    <title>Food blog</title>
+    <title>Foodie's Kitchen</title>
 </head>
 <body>
     <div class = "page-container">
         <div class="header">
             <div class="logo">
                 <img src="/images/logofood-removebg-preview.png" alt="Food Blog" /> 
-                <span>Food Blog</span>
+                <span>Foodie's Kitchen</span>
             </div>
             <div class="nav-menu">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+
                     <li><a href="/recipes/allRecipes.html">Recipes</a></li>
                 </ul>
             </div>
@@ -26,6 +33,7 @@
         </div>
         <div class = "wrapper">
             <div class="main-container">
+
                 <div class="times" id="recipe-times">
                     <!-- Times will be a 2x2 grid here -->
                 </div>
@@ -34,16 +42,41 @@
                 </div>
             </div>
         </div>
+        <form id="comment-form" class="comment-form" action="" method="post">
+            <input type="hidden" id="0" name="0" value="0">
+            <div class="form-field">
+              <label for="name">Name:</label>
+              <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-field">
+              <label for="comment">Comment:</label>
+              <textarea id="comment" name="comment" required></textarea>
+            </div>
+            <div class="form-field">
+              <label>Rating:</label>
+              <div class="rating">
+                <input type="radio" id="star5" name="rating" value="5"><label for="star5">5</label>
+                <input type="radio" id="star4" name="rating" value="4"><label for="star4">4</label>
+                <input type="radio" id="star3" name="rating" value="3"><label for="star3">3</label>
+                <input type="radio" id="star2" name="rating" value="2"><label for="star2">2</label>
+                <input type="radio" id="star1" name="rating" value="1"><label for="star1">1</label>
+              </div>
+            </div>
+            <button type="submit">Submit</button>
+          </form>
+
+          
         <footer class="footer">
             <div class="copyright">
                 &copy; <span id="year"></span>2023 Food Blog
             </div>
         </footer>
     </div>
+    
     <script src ="../js/displayRecipeDetails.js"></script>
     <script src ="../js/mobileNav.js"></script>
     <script src="https://kit.fontawesome.com/267860f909.js" crossorigin="anonymous"></script>
-
+ 
 
 </body>
 </html>
